# Rasayn

./: .gitattributes  .gitignore  README.md  REQUIREMENTS_v3.md  S10_BUILD_COMPLETE.md  S11_BUILD_COMPLETE.md  S12_BUILD_COMPLETE.md  S13_BUILD_COMPLETE.md  S13_HOTFIX_NOTES.md  S14_BUILD_COMPLETE.md  S15_BUILD_COMPLETE.md  S16_BUILD_COMPLETE.md  S17_BUILD_COMPLETE.md  S18_BUILD_COMPLETE.md  S1_BUILD_COMPLETE.md  S2_BUILD_COMPLETE.md  S3_BUILD_COMPLETE.md  S4_BUILD_COMPLETE.md  S5_BUILD_COMPLETE.md  S6_BUILD_COMPLETE.md  S7_BUILD_COMPLETE.md  S8_BUILD_COMPLETE.md  S9_BUILD_COMPLETE.md  SCAFFOLD_COMPLETE.md  SCAFFOLD_INDEX.md  SHIP_DESIGN_v2.md  SHIP_DESIGN_v3.md  _tscheck_full.json  package-lock.json  package.json  tsconfig.base.json  turbo.json  vitest.workspace.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.signed.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: abdm.rs  backup_scheduler.rs  cash_shift.rs  cleartax.rs  cleartax_wire.rs  cold_chain.rs  commands.rs  cygnet.rs  cygnet_wire.rs  db.rs  dpdp.rs  idempotency.rs  images.rs  khata.rs  license.rs  main.rs  phash.rs  photo_grn.rs  printer.rs  product_ingredients.rs  products.rs  products_perf.rs  rbac.rs  returns.rs  stock_transfer.rs  system_info.rs  telemetry.rs  whatsapp.rs
apps/desktop/src-tauri/src/oauth/: config.rs  gmail_api.rs  google.rs  keyring_store.rs  loopback.rs  mod.rs  pkce.rs
apps/desktop/src-tauri/tests/: cold_chain_test.rs  dpdp_test.rs  product_ingredients_test.rs
docs/: AUDIT_REPORT_2026-04-15.md
scripts/: SIGN_README.md  (+4 more)
(+289 files in other folders)
