[package]
name = "pharmacare-desktop"
version = "0.1.0"
edition = "2021"
description = "PharmaCare Pro desktop POS"
authors = ["Sourav Shaw"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
regex = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
chrono = { version = "0.4", features = ["clock"] }
keyring = "3"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
opener = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
